##Text encoding: utf-8

2014-08-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/glview.cc: fix rotation. [#42977] (patch from Toni Andjelkovic)
	* libs/gcu/glview.h: ditto.
	* libs/gcugtk/glview.cc: ditto.
	* libs/gcugtk/glview.h: ditto.
	* all: reduce as far as possible guint and gdouble uses.

2014-08-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/3d/Makefile.am: add appdata files for every program.
	* programs/3d/gchem3d.appdata.xml.in: ditto.
	* programs/calc/Makefile.am: ditto.
	* programs/calc/gchemcalc.appdata.xml.in: ditto.
	* programs/crystal/Makefile.am: ditto.
	* programs/crystal/gcrystal.appdata.xml.in: ditto.
	* programs/spectra/Makefile.am: ditto.
	* programs/spectra/gspectrum.appdata.xml.in: ditto.
	* programs/table/Makefile.am: ditto.
	* programs/table/gchemtable.appdata.xml.in: ditto.

2014-08-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: ensure that the document size is always updated.
	[#43091]
	* libs/gcp/operation.cc: ditto.
	* libs/gcp/view.cc: ditto.
	* programs/paint/gchempaint.appdata.xml.in: update license data.

2014-08-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/paint/Makefile.am: add an appdata file for GChemPaint.
	* programs/paint/gchempaint.appdata.xml.in: ditto.

2014-07-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: fixed attached objects position for non
	horizontal arrows.
	* libs/gcp/reaction-prop.cc: fixed object role persistence.

2014-07-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/delocalized-bond.cc: make it derive from Bondable.
	* libs/gcp/delocalized-bond.h: ditto.
	* libs/gcp/reaction-separator.cc: don't save.
	* libs/gcp/reaction-separator.h: ditto.
	* libs/gcp/step-counter.cc: ditto.
	* libs/gcp/step-counter.h: ditto.
	* libs/gcu/bond.cc: make it derive from Bondable.
	* libs/gcu/bond.h: ditto.
	* libs/gcu/bondable.h: remove some unuseful virtual methods.